# beets-mbgenre

./: README.md  pyproject.toml
beetsplug/: mbgenre.py
