[tool.poetry]
name = "beets-mbgenre"
version = "0.1.0"
description = ""
authors = ["andy-lang <6104530+andy-lang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.2"
beets = ">=2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
